applications/ezbookkeeping/ezbookkeeping-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ezbookkeeping
  namespace: ezbookkeeping
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: ezbookkeeping

spec:
  selector:
    matchLabels:
      app: ezbookkeeping

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: ezbookkeeping

    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - image: mayswind/ezbookkeeping:2.0.1
          imagePullPolicy: IfNotPresent
          name: ezbookkeeping
          ports:
            - containerPort: 8080
              name: ezbookkeeping

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "2"
